# sudoku-sat

./: CMakeLists.txt  README  kissat_main.c  minisat_main.cpp  puzzles.txt
